// Copyright 2020 The Measurement System Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.duchy;

import "src/main/proto/wfa/measurement/internal/duchy/computation_protocols.proto";

option java_package = "org.wfanet.measurement.internal.duchy";
option java_multiple_files = true;

// Internal ComputationControlService for all async protocols.
service AsyncComputationControl {
  // Advance a computation according to data received
  rpc AdvanceComputation(AdvanceComputationRequest)
      returns (AdvanceComputationResponse) {}
}

// Request to advance a computation.
message AdvanceComputationRequest {
  // The global identifier of the computation,
  string global_computation_id = 1;
  // The expected stage of this computation.
  ComputationStage computation_stage = 2;
  // The path of the blob newly added.
  string blob_path = 3;
  // The origin of the data, i.e., which duchy it comes from.
  string data_origin = 4;
}

message AdvanceComputationResponse {
  // Deliberately empty
}